; ModuleID = '/home/carl/AnghaBench/Cinder/src/glload/extr_wgl_load.c_LoadExt_ARB_make_current_read.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glload/extr_wgl_load.c_LoadExt_ARB_make_current_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"wglGetCurrentReadDCARB\00", align 1
@_funcptr_wglGetCurrentReadDCARB = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [25 x i8] c"wglMakeContextCurrentARB\00", align 1
@_funcptr_wglMakeContextCurrentARB = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @LoadExt_ARB_make_current_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LoadExt_ARB_make_current_read() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i64 @IntGetProcAddress(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i64 %2, i64* @_funcptr_wglGetCurrentReadDCARB, align 8
  %3 = load i64, i64* @_funcptr_wglGetCurrentReadDCARB, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* %1, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %1, align 4
  br label %8

8:                                                ; preds = %5, %0
  %9 = call i64 @IntGetProcAddress(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  store i64 %9, i64* @_funcptr_wglMakeContextCurrentARB, align 8
  %10 = load i64, i64* @_funcptr_wglMakeContextCurrentARB, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %8
  %13 = load i32, i32* %1, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %12, %8
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i64 @IntGetProcAddress(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
